syntax = "proto3";

package engagement;

enum VisibilityLevel {
  PRIVATE = 0;
  FRIENDS = 1;
  PUBLIC = 2;
}

service EngagementService {
  rpc CreatePoll(CreatePollRequest) returns (Poll);
  rpc GetPoll(GetPollRequest) returns (Poll);
  rpc ListPolls(ListPollsRequest) returns (ListPollsResponse);
  rpc Vote(VoteRequest) returns (VoteResponse);
  rpc GetPollResults(GetPollResultsRequest) returns (PollResults);
  rpc CreateForm(CreateFormRequest) returns (Form);
  rpc GetForm(GetFormRequest) returns (Form);
  rpc ListForms(ListFormsRequest) returns (ListFormsResponse);
  rpc SubmitForm(SubmitFormRequest) returns (FormSubmission);
  rpc GetFormSubmissions(GetFormSubmissionsRequest) returns (GetFormSubmissionsResponse);
}

message CreatePollRequest {
  string community_id = 1;
  string title = 2;
  repeated string options = 3;
  int64 expires_at = 4;
  VisibilityLevel visibility = 5;
}

message GetPollRequest {
  string poll_id = 1;
}

message ListPollsRequest {
  string community_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message VoteRequest {
  string poll_id = 1;
  string user_id = 2;
  int32 option_index = 3;
}

message GetPollResultsRequest {
  string poll_id = 1;
}

message CreateFormRequest {
  string community_id = 1;
  string title = 2;
  string description = 3;
  repeated FormField fields = 4;
  int64 expires_at = 5;
  VisibilityLevel visibility = 6;
}

message GetFormRequest {
  string form_id = 1;
}

message ListFormsRequest {
  string community_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message SubmitFormRequest {
  string form_id = 1;
  string user_id = 2;
  repeated FormFieldValue values = 3;
}

message GetFormSubmissionsRequest {
  string form_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message VoteResponse {
  bool success = 1;
  string message = 2;
}

message GetFormSubmissionsResponse {
  repeated FormSubmission submissions = 1;
  int32 total_count = 2;
}

message Poll {
  string id = 1;
  string community_id = 2;
  string title = 3;
  repeated string options = 4;
  int64 expires_at = 5;
  VisibilityLevel visibility = 6;
  int64 created_at = 7;
}

message PollResults {
  string poll_id = 1;
  repeated int32 option_votes = 2;
  int32 total_votes = 3;
}

message Form {
  string id = 1;
  string community_id = 2;
  string title = 3;
  string description = 4;
  repeated FormField fields = 5;
  int64 expires_at = 6;
  VisibilityLevel visibility = 7;
  int64 created_at = 8;
}

message FormField {
  string id = 1;
  string label = 2;
  string type = 3;
  bool required = 4;
  repeated string options = 5;
  int32 order = 6;
}

message FormFieldValue {
  string field_id = 1;
  string value = 2;
}

message FormSubmission {
  string id = 1;
  string form_id = 2;
  string user_id = 3;
  repeated FormFieldValue values = 4;
  int64 submitted_at = 5;
}

message ListPollsResponse {
  repeated Poll polls = 1;
  int32 total_count = 2;
}

message ListFormsResponse {
  repeated Form forms = 1;
  int32 total_count = 2;
}
